Removed typed properties so it works with 7.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 php:
+  - 7.3
   - 7.4
+  - 'nightly'
 dist: xenial
 before_script:
   - composer install --prefer-source --no-interaction
