--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require": {
         "php": ">=7.3.0",
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.2",
+        "phpstan/phpstan": "^0.12.52"
     }
 }
