--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,12 @@
-/tests export-ignore
+.github export-ignore
+tests export-ignore
+phpunit.xml.dist export-ignore
+phpcs.xml.dist export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
 .coveralls.yml export-ignore
-.travis.yml export-ignore
-.php_cs
-demo.php export-ignore
-phpunit.xml.dist
+phpunit.xml.dist export-ignore
+phpcs.xml.dist export-ignore
+CHANGELOG.md export-ignore
 README.md export-ignore
+demo.php export-ignore
