--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
     },
     "require": {
         "php": ">=7.3.0",
-        "phpunit/phpunit": "^9.2",
-        "phpstan/phpstan": "^0.12.52"
+        "phpunit/phpunit": "^9.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.64"
     }
 }
